service.yaml
apiVersion: v1
kind: Service
metadata:
  name: will-playground-service
spec:
  type: ClusterIP
  selector:
    app: will-playground
  ports:
    - name: http
      port: 8888 # service port
      targetPort: 8888 # container port
