ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: will-playground-routing
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: will-playground-service
            port:
              number: 8888
